[gd_scene load_steps=7 format=2]

[ext_resource path="res://object/Lost_money.gd" type="Script" id=1]
[ext_resource path="res://well_prepared sucai/NPC/interact.png" type="Texture" id=2]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=3]
[ext_resource path="res://well_prepared sucai/object/treasure_chest.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 8.06226

[sub_resource type="CircleShape2D" id=1]
radius = 38.0132

[node name="Treasure_chest" type="StaticBody2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="shadow" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 3, -16 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
